--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,22 @@
 .App {
   text-align: center;
+  background-color: #c5cfde;
 }
+#login {
+  float:right;
+}
+#logout{
+  float:right;
+}
+
+#navbar{
+  display: flex;
+  padding: 0 1rem;
+  z-index: 99 !important;
+  position: absolute;
+  top: 0px;
+}
+
 
 .App-logo {
   height: 40vmin;
