--- a/src/Components/AddAnimal.css
+++ b/src/Components/AddAnimal.css
@@ -66,7 +66,7 @@
   .button-submit:hover {
     opacity: .5;
 }
-.form-container input[type=file] {
+.form-container input[type=url] {
     width: 75%;
     padding: 15px;
     margin: 5px 0 22px 0;
