--- a/src/Components/Auction.css
+++ b/src/Components/Auction.css
@@ -10,7 +10,8 @@
 .rvView{
     text-align: center;
 }
-.animalImage{
-    margin-right: 50px;
-    border-radius: 50px;
+img{
+    margin-left: 250px;
+    width: 50px;
+    height: 50px;
 }
