add logo to homepage

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@ html {
   text-align: center;
   background-color: #c5cfde;
   margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 #login {
   float:right;
