--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,13 @@ html {
     transform: rotate(360deg);
   }
 }
+
+.about {
+  text-align: center;
+  background-color: #c5cfde;
+  margin-top: 100px;
+  color:black;
+  background-color: lightblue;
+  padding: 15px;
+  border: none;
+}
